Thu Mar  7 13:57:18 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/Invocation.cpp:
        * utils/logWalker/Log.cpp:
        * utils/logWalker/Thread.cpp:

          Fix compiler warnings.

Wed Mar 06 13:29:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>

        * tao/PI_Server/ServerRequestInterceptorC.h:
        * tests/Bug_4097_Regression/Bug_4097_Regression.cpp:
        * tests/Bug_4097_Regression/Bug_4097_Regression.idl:
        * tests/Bug_4097_Regression/README:

        Fuzz fixes.

Wed Mar 06 09:20:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>

        * docs/Tags.html:
        * tao/Invocation_Adapter.cpp:
        * tao/LocateRequest_Invocation_Adapter.cpp:
        * tao/Service_Callbacks.cpp:
        * tao/Synch_Invocation.cpp:
        * tao/Messaging/Asynch_Reply_Dispatcher.cpp:
        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientRequest_Interceptor.cpp:

          Correct minor error and location codes to reflect current code
          and correct general errno copies where fixed error codes should
          be thrown.

        * orbsvcs/orbsvcs/PortableGroup/PG_FactoryRegistry.cpp:
        * tao/PI_Server/ServerRequestInterceptorC.h:
        * tao/AnyTypeCode/Any_Dual_Impl_T.cpp:

          Minor 64bit type warnings and unused variables, possiable
          memory leaks under error conditions etc.

        * docs/Options.html:
        * tao/ORB_Core.cpp:
        * tao/IIOP_Endpoint.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Acceptor.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connection_Handler.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Endpoint.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Mcast_Transport.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport.cpp:

          Add missing UIPMC factory section and -ORBListenOnAll parameter
          to Options and fix -ORBEnforcePreferredInterfaces inversion