@@ -36,6 +36,12 @@ parse_args (int argc, ACE_TCHAR *argv[])
 int
 ACE_TMAIN (int argc, ACE_TCHAR *argv[])
 {
+
+  // Detection of closed on read currently not working certain platforms.
+#if defined (sun) || defined (__FreeBSD_version)
+  return 2;
+#endif
+
   try {
     // Initialize orb
     CORBA::ORB_var orb = CORBA::ORB_init( argc, argv );
